@@ -2,7 +2,7 @@
 # CustomerTicketZoom.dtl - provides HTML TicketZoom for CustomerTicketZoom.pm
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CustomerTicketZoom.dtl,v 1.94 2010-08-30 19:07:42 en Exp $
+# $Id: CustomerTicketZoom.dtl,v 1.95 2010-09-01 14:28:06 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -144,7 +144,7 @@
                     <div id="RichTextError" class="TooltipErrorMessage">
                         <p>$Text{"A message should have a body!"}</p>
                     </div>
-                    <div id="RichTextServerError" class="TooltipErrorMessage">
+                    <div id="RichTextServerError" class="TooltipErrorMessage TooltipServerErrorMessage">
                         <p>$Text{"The text is required."}</p>
                     </div>
                     <fieldset class="DontPrint">
